Index arrow up z-index fixed

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -145,3 +145,8 @@ margin:10px;}
 background-image: none ;
   
 }
+
+
+.page-text{
+  margin-top: 70px;
+}
